--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </form>
                         </div>
                         <div class="btn-wrapper mt-50">
-                            <a href="" class="btn theme-btn-2 btn-effect-2 text-uppercase">Contact Us</a>
+                            <a href="tel:+919502169592" class="btn theme-btn-2 btn-effect-2 text-uppercase">Contact Us</a>
                         </div>
                     </div>
                 </div>
